# s2t-tr-dev

./: .gitignore  Makefile  README.md  pyproject.toml  s2t_tr_dev_main_results_ami.ipynb  test_vox.parquet
.claude/: CLAUDE.md  settings.local.json
configs/: architecture_ablation.json  config.yaml  main_results_ami.json  main_results_ami_v2.json  main_results_voxpopuli.json  orchestrator.yaml
configs/experiments/: main_results_ami.yaml  main_results_voxpopuli.yaml  main_results_voxpopuli_v2.yaml  main_results_voxpopuli_v3.yaml  main_results_voxpopuli_v4.yaml
configs/pipeline/: main_results_ami_v2.yaml  main_results_ami_v4.yaml  main_results_ami_v5.yaml  main_results_ami_v6.yaml
docs/: mkdocs.yml
docs/docs/: important-discussion-material.md  index.md
docs/experiments/: v5_ablation_analysis.md
logs/ami_full_w2v2_large/: version_1test_results.json
logs/ami_full_w2v2_large_loss_ce_only/: config.json
logs/ami_full_w2v2_large_loss_softce_T01/: config.json
logs/ami_full_w2v2_large_loss_wer_only/: config.json
logs/ami_full_w2v2_large_loss_wer_softce/: config.json
logs/smoke_test/: config.json
notebooks/: base_model.ipynb  edc.ipynb  edc_v2.ipynb  raw_data.ipynb
notebooks/colab/: s2t_tr_dev_ablation_architecture.ipynb  s2t_tr_dev_ablation_loss.ipynb  s2t_tr_dev_architecture_ablation.ipynb  s2t_tr_dev_loss_ablation.ipynb  s2t_tr_dev_main_results_ami.ipynb  s2t_tr_dev_main_results_voxpopuli.ipynb  s2t_tr_dev_synthetic_experiment.ipynb
notebooks/colab_old/: main_results_ami_v2.ipynb  s2t_tr_dev_extract_features_from_base_models.ipynb  s2t_tr_dev_main_results_voxpopuli.ipynb  s2t_tr_dev_synthetic_experiment.ipynb
reports/manuscript/: main.aux  main.bbl  main.blg  main.out  main.tex  reference.bib
scratch/: print_table_test.py  pyarrow_test.py
src/: __init__.py  config.py  deneme.py
src/base_models/: config.py
src/data/: analyze_priors.py  config.py  dataset.py  generate_features.py  get_processed.py  get_raw.py  parquet_cache.py  preprocess.py  rechunk_parquet.py  synthetic.py  (+1 more)
(+80 files in other folders)
