[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "huseyin-karaca" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "datasets<4.0.0",
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "evaluate>=0.4.6",
    "ipython",
    "jiwer>=4.0.0",
    "jupyterlab",
    "librosa>=0.11.0",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "pytorch-lightning>=2.6.1",
    "ruff",
    "scikit-learn",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "tqdm",
    "transformers>=5.5.4",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

